# dbus-mppsolarv2

./: .gitmodules  README.md  dbus-mppsolar.py  debug_import.py  disable.sh  enable.sh  grok_chat.md  install.sh  pyproject.toml  restart.sh  run-mpp-solar.sh  standalone_mppsolar_test.py  start-mppsolar.sh  uninstall.sh
.github/: copilot-instructions.md
dbus-mppsolar/: battery.py  config.default.ini  dbushelper.py
dbus_mppsolar/: __init__.py  battery.py  config.default.ini  config.ini  dbus-mppsolar.py  dbushelper.py  inverter.py  utils.py
service/: com.victronenergy.mppsolar.service
test/: README.md
